Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-95743

TransformSpace property of Node item can't be read/changed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P0: Blocker P0: Blocker
    • 6.2.0
    • 6.2.0 Beta1
    • Quick: 3D
    • None
    • Windows
    • d10c83f31f24e3ff10a5d24cd108d98d8e5cf056 (qt/qtquick3d/dev) d2af6c6b245a482fb3db3fdf7a05c1eb9780889b (qt/qtquick3d/6.2)
    • Qt Quick 3D - 2021 Week 31/32

      To reproduce add this code to any Quick3D example:

              Node
              {
                  TransformSpace: Node.SceneSpace
                  Component.onCompleted:
                  {
                      TransformSpace = Node.LocalSpace
                      console.log("TransformSpace " + TransformSpace)
                  }
              }
      

      Errors:
      qrc:/main.qml:73:13: Invalid attached object assignment
      qrc:/main.qml:76: Error: Invalid write to global property "TransformSpace"
      qrc:/main.qml:77: ReferenceError: TransformSpace is not defined

      As the property doesn't work and thus nobody has ever used it before it I suggest to rename it to "transformSpace" (small first letter)

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            janichol Andy Nichols
            alexey89 alexey89
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes