Doc: Remove non-existent property TransformSpace

The /qmlproperty tag was used incorrectly to document the TransformSpace
enum used by the rotate method. So this tag is removed and the enum
values are just documented in the rotate methods documentation instead,
since that is the only place it can be used.

Fixes: QTBUG-95743
Pick-to: 6.2
Change-Id: I6f4370c759f164b7f58be1030526f74fba5c6d84
Reviewed-by: Venugopal Shivashankar <Venugopal.Shivashankar@qt.io>